# koneko

./: BUILD.md  CMakeLists.txt  COMPILATION_SUMMARY.md  Makefile  README_CURRENT.md  build.sh  callme.asm  callr12.asm  main.cpp  main_minimal.cpp  main_simple.cpp  mingw-toolchain.cmake  sleep.cpp  spoof.asm  stubs.cpp
headers/: enums.h  includes.h  structs.h
